--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "update": "node src/update.js"
   },
   "dependencies": {
     "axios": "1.5.1",
+    "child_process": "^1.0.2",
+    "dotenv": "^16.3.1",
     "inquirer": "9.2.11",
     "node-html-parser": "6.1.10",
     "shelljs": "0.8.5"
