--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "axios": "1.5.1",
-    "child_process": "^1.0.2",
-    "dotenv": "^16.3.1",
+    "child_process": "1.0.2",
+    "dotenv": "16.3.1",
     "inquirer": "9.2.11",
-    "node-html-parser": "6.1.10",
+    "puppeteer": "23.6.1",
     "shelljs": "0.8.5"
   }
 }
